--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
                         <!-- <h2 class="text-uppercase account_setup pb-4 d-lg-none">ACCOUNT SETUP</h2> -->
                         <h1 class="text-uppercase text-center">User LOGIN</h1>
 
-                        <form>
+                        <form id="signupForm" method="POST" action="">
                             <div class="login_form">
                                 <div class="input_box">
                                     <label for="loginEmailInput" class="form-label">Email</label>
@@ -122,7 +122,7 @@
 
 
                         <div class="mt-4 d-flex justify-content-center">
-                            <a href="#" class="btn button_rounded text-uppercase  button_lg">Log In</a>
+                            <a href="" id="existing_user_login_btn" class="btn button_rounded text-uppercase  button_lg">Log In</a>
 
 
                         </div>
@@ -203,6 +203,7 @@
 
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/login.js"></script>
     <script>
 
 const forgotPassDiv = document.getElementById('forgot_password_div');
