register api auth done and login access token is not working well, sh… …owing CROS and Internal Server error

--- a/register.html
+++ b/register.html
@@ -96,12 +96,12 @@
                                 <div class="input_box">
                                     <label for="inputNewFirstName" class="form-label">First name</label>
                                     <input type="text" autocomplete class="form-control" id="inputNewFirstName"
-                                        placeholder="John" aria-describedby="firstName">
+                                        placeholder="John" required aria-describedby="firstName">
 
                                 </div>
                                 <div class="input_box">
                                     <label for="inputNewLastName" class="form-label">last name</label>
-                                    <input type="text" autocomplete class="form-control" id="inputNewLastName"
+                                    <input required type="text" autocomplete class="form-control" id="inputNewLastName"
                                         placeholder="Bredson" aria-describedby="lastName">
 
                                 </div>
@@ -109,13 +109,13 @@
                             <div class="contact input_group">
                                 <div class="input_box">
                                     <label for="newUserPhone" class="form-label">Phone (optional)</label>
-                                    <input type="phone" autocomplete class="form-control" id="newUserPhone"
+                                    <input required type="phone" autocomplete class="form-control" id="newUserPhone"
                                         placeholder="838-822-2467" aria-describedby="phoneHelp">
 
                                 </div>
                                 <div class="input_box">
                                     <label for="inputNewEmail" class="form-label">Email address</label>
-                                    <input type="email" autocomplete class="form-control" id="inputNewEmail"
+                                    <input required type="email" autocomplete class="form-control" id="inputNewEmail"
                                         placeholder="tromp.velda@russel.biz" aria-describedby="phoneHelp">
 
                                 </div>
@@ -123,12 +123,12 @@
                             <div class="password input_group">
                                 <div class="input_box">
                                     <label for="newUserPassword" class="form-label">Password</label>
-                                    <input type="password" autocomplete class="form-control" id="newUserPassword"
+                                    <input required type="password" autocomplete class="form-control" id="newUserPassword"
                                         placeholder="*********************">
                                 </div>
                                 <div class="input_box">
                                     <label for="newUserConfirmPass" class="form-label">Confirm Password</label>
-                                    <input type="password" autocomplete class="form-control" id="newUserConfirmPass"
+                                    <input required type="password" autocomplete class="form-control" id="newUserConfirmPass"
                                         placeholder="*********************">
                                 </div>
                             </div>
